--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,23 +8,22 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.schema=classpath:db/schema.sql
+spring.datasource.data=classpath:db/data.sql
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-#spring.cache.jcache.config=classpath:ehcache.xml
-
-#spring.sql.init.mode=never
-
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.cache.jcache.config=classpath:ehcache.xml
 
 
-#spring.datasource.schema=classpath:db/schema.sql
-#spring.datasource.data=classpath:db/data.sql
+
+
+
 
 
 
