--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.datasource.schema=classpath:db/schema.sql
-spring.datasource.data=classpath:db/data.sql
+#spring.datasource.schema=classpath:db/schema.sql
+#spring.datasource.data=classpath:db/data.sql
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
